Fix scrolling bug and overflow

--- a/src/Application.scss
+++ b/src/Application.scss
@@ -4,7 +4,6 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
   height: 100vh;
 
   font-family: $font;
@@ -13,6 +12,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
+  overflow-x: hidden;
 }
 
 h1, h2 {
@@ -81,10 +81,11 @@ p {
 }
 
 #root {
+  display: block;
   width: 100%;
   height: 100%;
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
+  //scroll-snap-type: y mandatory;
+  //overflow-y: scroll;
 
   section {
     display: flex;
@@ -96,17 +97,20 @@ p {
   }
 }
 
-.hidden {
-  opacity: 0;
-  transform: translateY(50px);
-}
+//.hidden {
+//  opacity: 0;
+//  transform: translateY(50px);
+//}
+//
+//.visible {
+//  opacity: 1;
+//  transform: translateY(0);
+//  transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
+//}
 
-.visible {
-  opacity: 1;
-  transform: translateY(0);
-  transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
-}
-
+//.fade-in-up {
+//  @include fadeInUp(0.8s);
+//}
 
 
 @media screen and (max-width: $viewport-mobile) {
