--- a/src/commen/animation.scss
+++ b/src/commen/animation.scss
@@ -25,7 +25,3 @@
     }
   }
 }
-
-.fade-in-up {
-  @include fadeInUp(0.8s);
-}
