--- a/src/components/progress/Progress.module.scss
+++ b/src/components/progress/Progress.module.scss
@@ -20,29 +20,20 @@ nav {
 
       li a {
         display: block;
-        padding: 0 10px;
-
-        span {
-          display: block;
-          width: 3.5px;
-          height: 20px;
-          border-radius: 5px;
-          cursor: pointer;
-          background: $color-white;
-          transition: all 0.3s ease;
-
-        }
+        margin: 0 10px;
+        width: 3.5px;
+        height: 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        background: $color-white;
+        transition: all 0.3s ease;
 
         &:hover, &.active {
-          span {
-            background: $color-primary;
-          }
+          background: $color-primary;
         }
 
         &.active {
-          span {
-            height: 30px;
-          }
+          height: 30px;
         }
       }
     }
